--- a/project_8/Project-8.ipynb
+++ b/project_8/Project-8.ipynb
@@ -1602,7 +1602,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.03767681121826172,
+       "elapsed": 0.07077455520629883,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -1616,7 +1616,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a465b1d7594440ac9271332aec0e3ea5",
+       "model_id": "17aa4240502c486fa3334afbe7a6a2d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1685,16 +1685,16 @@
        "      <td>6</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.827774e-12</td>\n",
-       "      <td>4.957887e-13</td>\n",
-       "      <td>-1.039864e-11</td>\n",
-       "      <td>5.605020e-12</td>\n",
-       "      <td>-1.470822e-12</td>\n",
-       "      <td>4.011656e-12</td>\n",
-       "      <td>5.109981e-13</td>\n",
-       "      <td>2.889660e-12</td>\n",
-       "      <td>1.826368e-12</td>\n",
-       "      <td>2.057034e-12</td>\n",
+       "      <td>-1.252428e-12</td>\n",
+       "      <td>2.601118e-12</td>\n",
+       "      <td>4.795351e-12</td>\n",
+       "      <td>3.564866e-12</td>\n",
+       "      <td>1.679793e-12</td>\n",
+       "      <td>9.701285e-12</td>\n",
+       "      <td>-1.228685e-12</td>\n",
+       "      <td>-4.039338e-12</td>\n",
+       "      <td>-6.572054e-14</td>\n",
+       "      <td>-1.293386e-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1709,16 +1709,16 @@
        "      <td>6</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.224272e-12</td>\n",
-       "      <td>-5.222725e-12</td>\n",
-       "      <td>-8.173786e-12</td>\n",
-       "      <td>6.748944e-13</td>\n",
-       "      <td>6.141043e-12</td>\n",
-       "      <td>4.291640e-12</td>\n",
-       "      <td>-5.156173e-12</td>\n",
-       "      <td>1.801908e-12</td>\n",
-       "      <td>1.162591e-12</td>\n",
-       "      <td>3.252984e-12</td>\n",
+       "      <td>2.866779e-12</td>\n",
+       "      <td>2.083108e-12</td>\n",
+       "      <td>-3.705360e-12</td>\n",
+       "      <td>-2.070790e-12</td>\n",
+       "      <td>-2.700219e-12</td>\n",
+       "      <td>-8.507415e-12</td>\n",
+       "      <td>3.096422e-13</td>\n",
+       "      <td>4.056035e-12</td>\n",
+       "      <td>-2.481578e-13</td>\n",
+       "      <td>1.151927e-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1733,16 +1733,16 @@
        "      <td>6</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.174504e-12</td>\n",
-       "      <td>-7.583158e-12</td>\n",
-       "      <td>-8.696206e-12</td>\n",
-       "      <td>8.015195e-13</td>\n",
-       "      <td>8.323618e-12</td>\n",
-       "      <td>2.390812e-12</td>\n",
-       "      <td>-6.535934e-12</td>\n",
-       "      <td>1.753981e-12</td>\n",
-       "      <td>1.515631e-12</td>\n",
-       "      <td>3.554248e-12</td>\n",
+       "      <td>5.446252e-12</td>\n",
+       "      <td>-3.707732e-12</td>\n",
+       "      <td>-2.349594e-12</td>\n",
+       "      <td>-5.494858e-12</td>\n",
+       "      <td>-3.388798e-12</td>\n",
+       "      <td>-7.489952e-12</td>\n",
+       "      <td>-1.807903e-12</td>\n",
+       "      <td>2.059941e-12</td>\n",
+       "      <td>1.852374e-12</td>\n",
+       "      <td>9.083266e-12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1756,24 +1756,24 @@
        "2  1433221999827     111016  view  318965            NaN            0   \n",
        "\n",
        "                     date  year  month  day_of_week  ...  item_factor_20  \\\n",
-       "0 2015-06-02 05:02:12.117  2015      6            2  ...    2.827774e-12   \n",
-       "1 2015-06-02 05:50:14.164  2015      6            2  ...    2.224272e-12   \n",
-       "2 2015-06-02 05:13:19.827  2015      6            2  ...    1.174504e-12   \n",
+       "0 2015-06-02 05:02:12.117  2015      6            2  ...   -1.252428e-12   \n",
+       "1 2015-06-02 05:50:14.164  2015      6            2  ...    2.866779e-12   \n",
+       "2 2015-06-02 05:13:19.827  2015      6            2  ...    5.446252e-12   \n",
        "\n",
        "  item_factor_21  item_factor_22  item_factor_23  item_factor_24  \\\n",
-       "0   4.957887e-13   -1.039864e-11    5.605020e-12   -1.470822e-12   \n",
-       "1  -5.222725e-12   -8.173786e-12    6.748944e-13    6.141043e-12   \n",
-       "2  -7.583158e-12   -8.696206e-12    8.015195e-13    8.323618e-12   \n",
+       "0   2.601118e-12    4.795351e-12    3.564866e-12    1.679793e-12   \n",
+       "1   2.083108e-12   -3.705360e-12   -2.070790e-12   -2.700219e-12   \n",
+       "2  -3.707732e-12   -2.349594e-12   -5.494858e-12   -3.388798e-12   \n",
        "\n",
        "   item_factor_25  item_factor_26  item_factor_27  item_factor_28  \\\n",
-       "0    4.011656e-12    5.109981e-13    2.889660e-12    1.826368e-12   \n",
-       "1    4.291640e-12   -5.156173e-12    1.801908e-12    1.162591e-12   \n",
-       "2    2.390812e-12   -6.535934e-12    1.753981e-12    1.515631e-12   \n",
+       "0    9.701285e-12   -1.228685e-12   -4.039338e-12   -6.572054e-14   \n",
+       "1   -8.507415e-12    3.096422e-13    4.056035e-12   -2.481578e-13   \n",
+       "2   -7.489952e-12   -1.807903e-12    2.059941e-12    1.852374e-12   \n",
        "\n",
        "   item_factor_29  \n",
-       "0    2.057034e-12  \n",
-       "1    3.252984e-12  \n",
-       "2    3.554248e-12  \n",
+       "0   -1.293386e-11  \n",
+       "1    1.151927e-11  \n",
+       "2    9.083266e-12  \n",
        "\n",
        "[3 rows x 45 columns]"
       ]
@@ -1819,7 +1819,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.07625794410705566,
+       "elapsed": 0.06627082824707031,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -1833,7 +1833,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57d49ed5f8e54a4a89d08963dcc54fa9",
+       "model_id": "645b468518974a1b94fc5c367536d70e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2186,7 +2186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Average Precision @3: 0.26\n"
+      "Mean Average Precision @3: 0.12\n"
      ]
     }
    ],
@@ -2301,7 +2301,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 50/50 [41:40<00:00, 50.01s/it]\n"
+      "Epoch: 100%|██████████| 50/50 [42:01<00:00, 50.43s/it]\n"
      ]
     },
     {
@@ -2407,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2416,7 +2416,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.13271403312683105,
+       "elapsed": 0.1293807029724121,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -2424,18 +2424,18 @@
        "postfix": null,
        "prefix": "",
        "rate": null,
-       "total": 30,
+       "total": 20,
        "unit": "it",
        "unit_divisor": 1000,
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d8491a23597484e9ad8334d2ec74c79",
+       "model_id": "b04d31800e4643c0bea3d73a74159e22",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/30 [00:00<?, ?it/s]"
+       "  0%|          | 0/20 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -2462,7 +2462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2471,7 +2471,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.08463835716247559,
+       "elapsed": 0.09164214134216309,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -2485,7 +2485,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bf63b0070364a518a88ebf07c492d36",
+       "model_id": "d92e8928e2b74881851e284a056c5f1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2500,7 +2500,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Average Precision at 3: 0.0007982\n"
+      "Mean Average Precision at 3: 0.00068885\n"
      ]
     }
    ],
@@ -2512,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2523,7 +2523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2531,7 +2531,7 @@
      "output_type": "stream",
      "text": [
       "Recommended items for user 97154:\n",
-      "[1161163 1341202  705542]\n"
+      "[1161163  757355  371606]\n"
      ]
     }
    ],
@@ -3037,10 +3037,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision_score =  0.0161\n",
-      "recall_score =  0.0001\n",
-      "f1_score =  0.0002\n",
-      "accuracy =  0.9924\n"
+      "precision_score =  0.0296\n",
+      "recall_score =  0.0005\n",
+      "f1_score =  0.0009\n",
+      "accuracy =  0.9923\n"
      ]
     }
    ],
@@ -3077,21 +3077,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('models/lfm_model.pkl', 'wb') as output:\n",
-    "    pickle.dump(lfm_model, output)"
+    "with open('als_model.pkl', 'wb') as output:\n",
+    "    pickle.dump(als_model, output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('models/sparse_user_item.pkl', 'wb') as output:\n",
+    "with open('sparse_user_item.pkl', 'wb') as output:\n",
     "    pickle.dump(sparse_user_item, output)"
    ]
   }
