edited project 8 files

--- a/project_8/Project-8.ipynb
+++ b/project_8/Project-8.ipynb
@@ -3056,7 +3056,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для построения веб-сервиса используем ALS Модель"
+    "Для построения веб-сервиса используем LightFM модель"
    ]
   },
   {
@@ -3081,18 +3081,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('als_model.pkl', 'wb') as output:\n",
-    "    pickle.dump(als_model, output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('sparse_user_item.pkl', 'wb') as output:\n",
-    "    pickle.dump(sparse_user_item, output)"
+    "with open('lfm_model.pkl', 'wb') as output:\n",
+    "    pickle.dump(lfm_model, output)"
    ]
   }
  ],
